<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#A79E97"
    tools:context=".userinterface.shopList">

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:ems="10"
        android:hint="@string/nom_Prod"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/numCant"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="@string/cant_Prod"
        android:inputType="number" />

    <EditText
        android:id="@+id/numPrecio"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="@string/prec_Prod"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/btn_agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/numPrecio"
        app:layout_constraintVertical_bias="0.866" />

</LinearLayout>